@@ -27,7 +27,15 @@ libamclient_la_LDFLAGS = -release $(VERSION)
 
 libamclient_a_SOURCES=  $(libamclient_la_SOURCES)
 
-LDADD =	libamclient.$(LIB_EXTENSION) \
+###
+# Because libamanda includes routines (e.g. regex) provided by some system
+# libraries, and because of the way libtool sets up the command line, we
+# need to list libamanda twice here, first to override the system library
+# routines, and second to pick up any references in the other libraries.
+###
+
+LDADD = ../common-src/libamanda.$(LIB_EXTENSION) \
+	libamclient.$(LIB_EXTENSION) \
 	../common-src/libamanda.$(LIB_EXTENSION)
 
 SUFFIXES =		.sh .pl
