@@ -31,7 +31,15 @@ libamserver_la_LDFLAGS= -release $(VERSION)
 
 libamserver_a_SOURCES=	$(libamserver_la_SOURCES)
 
-LDADD =	libamserver.$(LIB_EXTENSION) \
+###
+# Because libamanda includes routines (e.g. regex) provided by some system
+# libraries, and because of the way libtool sets up the command line, we
+# need to list libamanda twice here, first to override the system library
+# routines, and second to pick up any references in the other libraries.
+###
+
+LDADD = ../common-src/libamanda.$(LIB_EXTENSION) \
+	libamserver.$(LIB_EXTENSION) \
 	../tape-src/libamtape.$(LIB_EXTENSION) \
 	../common-src/libamanda.$(LIB_EXTENSION)
 
